# OxiDash

./: Cargo.toml  README.md  flake.nix  style.css
.direnv/: flake-profile-5-link  flake-profile-6-link
.github/workflows/: rust.yml
nix/: default.nix  hm.nix
src/: main.rs
src/notibox/: imp.rs  mod.rs
src/templates/: resources.gresource.xml  window.ui
src/utils/: listener.rs  mod.rs  notificationbutton.rs
src/window/: imp.rs  mod.rs
