[package]
name = "oxidash"
version = "0.1.0"
edition = "2021"
description = "A notification Center written in rust, used with oxinoti."
repository = "https://github.com/DashieTM/OxiDash"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
directories-next = "2.0.0"
gtk = { version = "0.6.6", package = "gtk4" }
gtk4-layer-shell = "0.0.3"
adw = { version = ">= 0.3.1", package = "libadwaita", features = ["v1_2"] }
serde_json = "1.0.107"
json = "0.12.4"
dbus = "0.9.7"
dbus-crossroads = "0.5.2"

[build-dependencies]
glib-build-tools = "0.18"
